# ADKCodeAssistant

./: .dockerignore  .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
coding_assistant/: .env.example  README.md  agent.py  coding_assistant_context.json  coding_assistant_context.json.sample  main.py  requirements.txt  setup.py
coding_assistant/prompts/: __init__.py  analyzer_agent.py  coder_agent.py  planner_agent.py  reviewer_agent.py  root_agent.py
coding_assistant/shared_libraries/: __init__.py  constants.py  types.py
coding_assistant/sub_agents/: __init__.py
coding_assistant/sub_agents/analyzer/: __init__.py  agent.py
coding_assistant/sub_agents/coder/: __init__.py  agent.py
coding_assistant/sub_agents/planner/: __init__.py  agent.py
coding_assistant/sub_agents/reviewer/: __init__.py  agent.py
coding_assistant/tools/: __init__.py  code_analysis.py  coding.py  filesystem.py  github_tools.py  grep.py  planning.py  review.py
src/main/java/com/devoxx/mcp/filesystem/tools/: BashService.java
